# pyengine

./: .gitignore  .gitmodules  CMakeLists.txt  PythonicUniverse.py  iterutils.py  log.xsl  our_future.py  py-universe.py  pyUniverse.py  test_iterutils.py  test_typeutils.py  test_unittest.py  typeutils.py  unitest.py
CEngine/: CMakeLists.txt  pyengine-client.cpp
CEngine/GL/: AbstractImage.cpp  AbstractImage.hpp  Base.cpp  Base.hpp  BufferMap.cpp  BufferMap.hpp  CMakeLists.txt  CairoUtils.cpp  CairoUtils.hpp  GenericBuffer.cpp  GenericBuffer.hpp  GeometryBuffer.cpp  GeometryBuffer.hpp  GeometryBufferView.cpp  GeometryBufferView.hpp  GeometryObject.cpp  GeometryObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  StateManagement.cpp  StateManagement.hpp  TextureAtlas.cpp  TextureAtlas.hpp
CEngine/IO/: CMakeLists.txt  FTIOWrapper.cpp  FTIOWrapper.hpp  FileStream.cpp  FileStream.hpp  IO.hpp  Log.cpp  Log.hpp  PNGIOWrapper.cpp  PNGIOWrapper.hpp  StdIOStream.cpp  StdIOStream.hpp  Stream.cpp  Stream.hpp  Thread.cpp  Thread.hpp  Time.cpp  Time.hpp
CEngine/Math/: CMakeLists.txt  Matrices.cpp  Matrices.hpp  MatrixTemplates.hpp  VectorTemplates.hpp  Vectors.cpp  Vectors.hpp  variadic_initializer.hpp
CEngine/Misc/: CMakeLists.txt  EnumBitset.hpp  Exception.cpp  Exception.hpp  Int.cpp  Int.hpp  SetOperations.hpp  UUID.cpp  UUID.hpp
CEngine/PythonInterface/: CMakeLists.txt  CairoHelpers.cpp  CairoHelpers.hpp  GL.cpp  GL.hpp  Helpers.cpp  Helpers.hpp  Log.cpp  Log.hpp  Package.cpp  Package.hpp  Pango.cpp  Pango.hpp  RenderGraph.cpp  RenderGraph.hpp  Resources.cpp  Resources.hpp  SceneGraph.cpp  SceneGraph.hpp  Window.cpp  Window.hpp
CEngine/RenderGraph/: CMakeLists.txt  DeferredShading.cpp  DeferredShading.hpp  Stage.cpp  Stage.hpp
CEngine/Resources/: CMakeLists.txt  Font.cpp  Font.hpp  Image.cpp  Image.hpp
CEngine/SceneGraph/: CMakeLists.txt  Leaf.cpp  Leaf.hpp  Node.cpp  Node.hpp  SceneGraph.cpp  SceneGraph.hpp  Spatial.cpp  Spatial.hpp
CEngine/UI/: Application.cpp  Application.hpp  BaseRules.cpp  Border.cpp  Border.hpp  CMakeLists.txt  CSS.cpp  CSS.hpp  DragController.cpp  DragController.hpp  Events.hpp  Fill.cpp  Fill.hpp  Key.hpp  KeyAutogen.inc  Label.cpp  Label.hpp  RootWidget.cpp  RootWidget.hpp  Selectors.cpp  Selectors.hpp  Shapes.cpp  Shapes.hpp  Static.hpp  Style.cpp  Style.hpp  Theme.cpp  Theme.hpp  WidgetBase.cpp  WidgetBase.hpp
CEngine/UI/CSS/: BaseRules.cpp  BaseRules.hpp  Border.cpp  Border.hpp  CSS.cpp  CSS.hpp  Fill.cpp  Fill.hpp  Rules.cpp  Rules.hpp  Selectors.cpp  Selectors.hpp  Shapes.cpp  Shapes.hpp  Style.cpp  Style.hpp  Theme.cpp  Theme.hpp
CEngine/UI/Widgets/: BoxWidget.cpp  BoxWidget.hpp  ButtonWidget.cpp  ButtonWidget.hpp  DragController.cpp  DragController.hpp  LabelWidget.cpp  LabelWidget.hpp  LayerWidget.cpp  LayerWidget.hpp  RootWidget.cpp  RootWidget.hpp  SpaceWidget.cpp  SpaceWidget.hpp  WidgetBase.cpp  WidgetBase.hpp  WindowWidget.cpp  WindowWidget.hpp
CEngine/VFS/: CMakeLists.txt  Common.cpp  Common.hpp  Errors.cpp  Errors.hpp  FileSystem.cpp  FileSystem.hpp  Mount.cpp  Mount.hpp  Utils.cpp  Utils.hpp
CEngine/WindowInterface/: CMakeLists.txt  Display.cpp  Display.hpp  EventLoop.cpp  EventLoop.hpp  EventSink.cpp  EventSink.hpp  Window.cpp  Window.hpp
CMakeModules/: FindCairo.cmake  FindFreeImage.cmake  FindFreeImagePlus.cmake  FindGLEW.cmake  FindPango.cmake  FindSIGC++.cmake  Findglib.cmake  Findpycairo.cmake  Findrt.cmake
CUni/: GL.py  SceneGraph.py  Window.py  __init__.py
CUni/Window/: __init__.py  key.py
Engine/: Application.py  FreeDesktop.py  Model.py  Utils.py  __init__.py  test_Model.py  test_Utils.py
Engine/CEngine/: GL.py  Log.py  Pango.py  RenderGraph.py  Resources.py  SceneGraph.py  __init__.py  key.py  motion.py
Engine/GL/: Base.py  Framebuffer.py  Material.py  Model.py  RenderModel.py  Renderbuffer.py  Shader.py  ShaderLibrary.py  StateManagement.py  Texture.py  __init__.py  limits.py
Engine/Resources/: Base.py  CSSLoader.py  CairoWrapper.py  FontLoader.py  Manager.py  MaterialLoader.py  Model.py  ModelData.py  ModelLoader.py  PNGTextureLoader.py  ShaderLoader.py  ShaderParser.py  Text.py  TextLoader.py  TextureLoader.py  __init__.py  test_CSSLoader.py  test_Manager.py  test_ModelLoader.py  test_Resource.py  test_ResourceLoader.py  test_ResourceVFS.py  test_ShaderLoader.py  test_ShaderParser.py  test_Text.py  test_TextLoader.py
Engine/SceneGraph/: Core.py
Engine/UI/: BoxModel.py  BoxWidget.py  ButtonWidget.py  CSSProperties.py  DragController.py  EditWidget.py  FSWidget.py  Flags.py  IconWidget.py  Label.py  LabelWidget.py  LayerWidget.py  ListWidget.py  MenuWidget.py  Rect.py  Root.py  RootWidget.py  Scene.py  SceneWidget.py  Screen.py  ScreenWidget.py  ScrollWidget.py  SpaceWidget.py  Style.py  StylesheetMinilanguage.py  Theme.py  Themes.py  Widget.py  WidgetBase.py  WindowWidget.py  __init__.py  test_BoxModel.py  test_BoxWidget.py  test_CSSProperties.py  test_Rect.py  test_Style.py  test_Theme.py  test_Widget.py
Engine/VFS/: Errors.py  FileSystem.py  Mounts.py  Utils.py  __init__.py  test_FileSystem.py  test_Mounts.py  test_Utils.py
Engine/pygletHeadless/: __init__.py
client-host/Math/: Matrices.cpp  Matrices.hpp  MatrixTemplates.hpp  VectorTemplates.hpp  Vectors.cpp  Vectors.hpp
client-host/SceneGraph/: Node.cpp  Node.hpp  SceneGraph.cpp  SceneGraph.hpp  Spatial.cpp  Spatial.hpp
client-host/WindowInterface/: Display.cpp  Display.hpp  Window.hpp
cpphost/: CMakeLists.txt  pyuni-client.cpp  pyuniConfig.template
cpphost/Contrib/: CMakeLists.txt
cpphost/GL/: AbstractImage.cpp  AbstractImage.hpp  Base.cpp  Base.hpp  BufferMap.hpp  (+17 more)
cpphost/PythonInterface/: CMakeLists.txt  CairoHelpers.cpp  CairoHelpers.hpp  GL.cpp  GL.hpp  Helpers.cpp  Helpers.hpp  Log.cpp  Log.hpp  Module.cpp  Module.hpp  Package.cpp  Package.hpp  Pango.cpp  Pango.hpp  RenderGraph.cpp  RenderGraph.hpp  Resources.cpp  Resources.hpp  SceneGraph.cpp  SceneGraph.hpp  Window.cpp  Window.hpp
docs/: .gitignore  AUTHORS  conf.py  doxygen.conf  index.rst
host/: main.cpp
pyUniverse/: PythonicUniverse.py
tests/: main.cpp
(+232 files in other folders)
