add_library(pyengine_UI
  "CSS/Selectors.cpp"
  "CSS/CSS.cpp"
  "CSS/Shapes.cpp"
  "CSS/Fill.cpp"
  "CSS/Border.cpp"
  "CSS/Style.cpp"
  "CSS/BaseRules.cpp"
  "CSS/Rules.cpp"
  "CSS/Theme.cpp"
  "Label.cpp"
  "Widgets/WidgetBase.cpp"
  "Widgets/LabelWidget.cpp"
  "Widgets/ButtonWidget.cpp"
  "Widgets/DragController.cpp"
  "Widgets/WindowWidget.cpp"
  "Widgets/LayerWidget.cpp"
  "Widgets/BoxWidget.cpp"
  "Widgets/RootWidget.cpp"
)
add_dependencies(pyengine_UI pyengine_GL pyengine_WindowInterface)
